--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,5 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StartUpDG = "472ebc20-7c99-4d4b-9470-8fde4e9faa0f"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
+Trixi = "a7f1ee26-1774-49b1-8366-f1abc58fbfcb"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
